@@ -587,43 +587,34 @@ class BinTableHDU(_TableBaseHDU):
         return (card.keyword == 'XTENSION' and
                 xtension in (cls._extension, 'A3DTABLE'))
 
-    def _calculate_datasum_from_data(self, data, blocking):
+    def _calculate_datasum_with_heap(self, blocking):
         """
         Calculate the value for the ``DATASUM`` card given the input data
         """
 
-        # Check the byte order of the data.  If it is little endian we
-        # must swap it before calculating the datasum.
-        for i in range(data._nfields):
-            coldata = data.field(i)
+        swapped = self._binary_table_byte_swap()
+        try:
+            dout = self.data.view(dtype='ubyte')
+            csum = self._compute_checksum(dout, blocking=blocking)
 
-            if not isinstance(coldata, chararray.chararray):
-                if isinstance(coldata, _VLF):
-                    for j, d in enumerate(coldata):
-                        if not isinstance(d, chararray.chararray):
-                            if d.itemsize > 1:
-                                if d.dtype.str[0] != '>':
-                                    d[:] = d.byteswap()
-                                    d.dtype = d.dtype.newbyteorder('>')
-                        field = np.rec.recarray.field(data, i)[j:j + 1]
-                        if field.dtype.str[0] != '>':
-                            field.byteswap(True)
-                else:
-                    if coldata.itemsize > 1:
-                        if data.field(i).dtype.str[0] != '>':
-                            data.field(i)[:] = data.field(i).byteswap()
-        data.dtype = data.dtype.newbyteorder('>')
+            # Now add in the heap data to the checksum (we can skip any gap
+            # between the table and the heap since it's all zeros and doesn't
+            # contribute to the checksum
+            for idx in range(self.data._nfields):
+                if isinstance(self.data.columns._recformats[idx], _FormatP):
+                    for coldata in self.data.field(idx):
+                        # coldata should already be byteswapped from the call
+                        # to _binary_table_byte_swap
+                        if not len(coldata):
+                            continue
 
-        dout = data.view(dtype='ubyte')
+                        csum = self._compute_checksum(coldata, csum,
+                                                      blocking=blocking)
 
-        for i in range(data._nfields):
-            if isinstance(data._coldefs._recformats[i], _FormatP):
-                for coldata in data.field(i):
-                    if len(coldata) > 0:
-                        dout = np.append(dout, coldata.view(dtype='ubyte'))
-
-        cs = self._compute_checksum(dout, blocking=blocking)
-        return cs
+            return csum
+        finally:
+            for arr in swapped:
+                arr.byteswap(True)
 
     def _calculate_datasum(self, blocking):
         """
@@ -631,8 +622,10 @@ class BinTableHDU(_TableBaseHDU):
         """
 
         if self._has_data:
-            # We have the data to be used.
-            return self._calculate_datasum_from_data(self.data, blocking)
+            # This method calculates the datasum while incorporating any
+            # heap data, which is obviously not handled from the base
+            # _calculate_datasum
+            return self._calculate_datasum_with_heap(blocking)
         else:
             # This is the case where the data has not been read from the file
             # yet.  We can handle that in a generic manner so we do it in the
@@ -644,12 +637,37 @@ class BinTableHDU(_TableBaseHDU):
         size = 0
 
         if self.data is not None:
-            size += self._binary_table_byte_swap(fileobj)
+            swapped = self._binary_table_byte_swap()
+            try:
+                fileobj.writearray(self.data)
+                # write out the heap of variable length array columns this has
+                # to be done after the "regular" data is written (above)
+                fileobj.write((self.data._gap * '\0').encode('ascii'))
+
+                nbytes = self.data._gap
+
+                for idx in range(self.data._nfields):
+                    if not isinstance(self.data.columns._recformats[idx],
+                                      _FormatP):
+                        continue
+
+                    field = self.data.field(idx)
+                    for row in field:
+                        if len(row) > 0:
+                            nbytes += row.nbytes
+                            if not fileobj.simulateonly:
+                                fileobj.writearray(row)
+
+                self.data._heapsize = nbytes - self.data._gap
+                size += nbytes
+            finally:
+                for arr in swapped:
+                    arr.byteswap(True)
             size += self.data.size * self.data.itemsize
 
         return size
 
-    def _binary_table_byte_swap(self, fileobj):
+    def _binary_table_byte_swap(self):
         """Prepares data in the native FITS format and writes the raw bytes
         out to the given file object.  This handles byte swapping from native
         to big endian (if necessary).  In addition, however, this also handles
@@ -658,60 +676,34 @@ class BinTableHDU(_TableBaseHDU):
         """
 
         to_swap = []
-        swapped = []
-        nbytes = 0
+
         if sys.byteorder == 'little':
             swap_types = ('<', '=')
         else:
             swap_types = ('<',)
-        try:
-            if not fileobj.simulateonly:
-                for idx in range(self.data._nfields):
-                    field = np.rec.recarray.field(self.data, idx)
-                    if isinstance(field, chararray.chararray):
-                        continue
-                    recformat = self.data.columns._recformats[idx]
-                    # only swap unswapped
-                    if field.itemsize > 1 and field.dtype.str[0] in swap_types:
-                        to_swap.append(field)
-                    # deal with var length table
-                    if isinstance(recformat, _FormatP):
-                        coldata = self.data.field(idx)
-                        for c in coldata:
-                            if (not isinstance(c, chararray.chararray) and
-                                c.itemsize > 1 and
-                                    c.dtype.str[0] in swap_types):
-                                to_swap.append(c)
 
-                while to_swap:
-                    obj = to_swap.pop()
-                    obj.byteswap(True)
-                    swapped.append(obj)
+        for idx in range(self.data._nfields):
+            field = np.rec.recarray.field(self.data, idx)
+            if isinstance(field, chararray.chararray):
+                continue
 
-                fileobj.writearray(self.data)
+            # only swap unswapped
+            if field.itemsize > 1 and field.dtype.str[0] in swap_types:
+                to_swap.append(field)
 
-                # write out the heap of variable length array
-                # columns this has to be done after the
-                # "regular" data is written (above)
-                fileobj.write((self.data._gap * '\0').encode('ascii'))
+            # deal with var length table
+            recformat = self.data.columns._recformats[idx]
+            if isinstance(recformat, _FormatP):
+                coldata = self.data.field(idx)
+                for c in coldata:
+                    if (not isinstance(c, chararray.chararray) and
+                            c.itemsize > 1 and c.dtype.str[0] in swap_types):
+                        to_swap.append(c)
 
-            nbytes = self.data._gap
+        for arr in reversed(to_swap):
+            arr.byteswap(True)
 
-            for idx in range(self.data._nfields):
-                if isinstance(self.data.columns._recformats[idx], _FormatP):
-                    field = self.data.field(idx)
-                    for row in field:
-                        if len(row) > 0:
-                            nbytes += row.nbytes
-                            if not fileobj.simulateonly:
-                                fileobj.writearray(row)
-
-            self.data._heapsize = nbytes - self.data._gap
-        finally:
-            for obj in swapped:
-                obj.byteswap(True)
-
-        return nbytes
+        return to_swap
 
     _tdump_file_format = textwrap.dedent("""
 
